# openauto

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CLANG_FORMAT_INSTALL.md  CMakeLists.txt  DATE_VERSIONING_SUMMARY.md  DEPENDENCIES.md  DEV_ENVIRONMENT_SUMMARY.md  Dockerfile  Dockerfile.cross  IMPLEMENTATION_SUMMARY.md  MODERN_LOGGING_IMPLEMENTATION.md  PACKAGE_REQUIREMENTS.md  PACKAGING_SUMMARY.md  README.md  RELEASE.txt  ROADMAP.md  TODO.md  VERSION_MIGRATION_SUMMARY.md  build-packages.sh  build.md  build.sh  build_safe.sh  check-version.sh  check_png_profiles.sh  configure_debug_logging.sh  docker-compose.cross.yml  fix_logging_issue.sh  fix_png_profiles.sh  fix_quotes.py  migrate_logger.py  start_autoapp_with_logging.sh  test_modern_logger  test_version  test_version.cpp  test_version_location.cpp  validate-package.sh  validate-packages.sh  verify_migration.ps1  (+1 more)
.devcontainer/: Dockerfile  Dockerfile.arm64  Dockerfile.armhf  Dockerfile.x64  README.md  devcontainer.json  post-create.sh  post-start.sh
.github/: CI_CD_README.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_TEMPLATE.md  copilot-instructions.md
.github/prompts/: modernlogging.prompt.md
.github/workflows/: README.md  build-cross-compile.yml  build_native.yml  build_with_apt_aasdk.yml  build_with_apt_aasdk.yml.disabled  ci-cd-unified.yml  ci-cd.yml  ci.yml  manual-release.yml  release.yml  trigger-apt-publish.yml  validate-packages.yml
assets/: resources.qrc
buildenv/: Dockerfile  cross-compile.md  docker-compose.yml  entrypoint.sh
cmake_modules/: CPackProjectConfig.cmake  FindHttplib.cmake  FindNlohmannJson.cmake  Findaap_protobuf.cmake
control-extract/: control  md5sums
cross/toolchain-build/: Dockerfile
docs/: CROSS_COMPILATION.md  CURRENT_IMPLEMENTATION_GUIDE.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUAL_PACKAGE_SUMMARY.md  LOGGER_FIXES_SUMMARY.md  MODERN_LOGGING.md  PACKAGE_BUILD_GUIDE.md  README.md  README_NEW.md  api-documentation.md  build-guide.md  cross-platform-builds.md  deployment-guide.md  implementation-summary-current.md  integration-guide-current.md  logger-migration.md  migration-status.md  modern-architecture.md  modernization-action-plan.md  modernization-summary-current.md  modernization-summary.md  rest-api-implementation.md  rest-api-quick-reference.md  test-guide.md  troubleshooting-guide.md  version-scheme-and-vscode.md
docs/archive/legacy/: README_OLD.md  implementation-summary-old.md  integration-guide-old.md
docs/archive/planning/: container-deployment.md  dependency-management.md  hardware-setup.md  rest-api-comprehensive.md  rest-api-debugging.md  rest-api-testing.md  (+1 more)
docs/fix_summaries/: README.md  multitouch_support.md  sensor_service_shutdown_hang_fix.md  shutdown_fix_summary.md  touch_fix_summary.md
docs/troubleshooting/: DEBUG_QUICKREF.md  remote-debugging.md  template.md  whitescreen-autoapp.md
helpers/: autoapp_helper
include/modern/: ConfigurationManager.hpp  Event.hpp  EventBus.hpp  Logger.hpp  ModernIntegration.hpp  RestApiServer.hpp  StateMachine.hpp  Version.hpp
packaging/: README.md
packaging/config/: logger-debug.conf  logger.conf  openauto-debug.conf  openauto-logs.ini  openauto.conf  openauto.ini  services-debug.conf  services.conf
packaging/debian/: postinst  postinst-debug  postrm  postrm-debug  preinst  preinst-debug  prerm  prerm-debug
packaging/logrotate/: openauto  openauto-debug
packaging/scripts/: openauto-monitor.sh  openauto-setup.sh  openauto-usb_action.sh
packaging/systemd/: openauto-btservice-debug.service  openauto-btservice.service  openauto-debug.service  openauto.service
packaging/udev/: 51-openauto.rules  99-openauto.rules
scripts/: build-in-docker.sh  build-multiarch.sh  build-status.sh  build_safe.sh  distro_release.sh  fix_all_logging.sh  fix_app_logging.py  fix_logging_syntax.py  install_opencardev_repo.sh  migrate_to_modern_logger.py  modern_logging_summary.sh  prepare-release.sh  quick_build.sh  setup-remote-debug.ps1  setup-remote-debug.sh  show_version.sh  test_cross_compile.sh
src/Common/: LoggerConfig.cpp  ModernLogger.cpp
src/autoapp/: App.cpp  autoapp.cpp
src/btservice/: AndroidBluetoothServer.cpp  AndroidBluetoothService.cpp  BluetoothHandler.cpp  btservice.cpp
src/modern/: ConfigurationManager.cpp  Event.cpp  EventBus.cpp  EventBus.cpp.backup  Logger.cpp  LoggerDemo.cpp  ModernIntegration.cpp  RestApiServer.cpp  RestApiServer.cpp.backup  RestApiServer_new.cpp  RestApiServer_old.cpp  RestApiServer_stub.cpp  StateMachine.cpp  httplib_impl.cpp
tests/: CMakeLists.txt  test_modern_logger.cpp
tests/integration/: AndroidAutoIntegrationTests.cpp  BluetoothIntegrationTests.cpp  CMakeLists.txt  UIIntegrationTests.cpp  main.cpp  test_android_auto_integration.cpp  test_api_integration.cpp  test_bluetooth_integration.cpp  test_configuration_integration.cpp  test_end_to_end.cpp  test_ui_integration.cpp
tests/mocks/: CMakeLists.txt  MockAOAPDevice.hpp  MockAndroidAutoEntity.hpp  MockAndroidAutoEntityEventHandler.hpp  MockAndroidAutoEntityFactory.hpp  MockAudioInput.hpp  MockAudioOutput.hpp  MockBluetoothDevice.hpp  MockConfiguration.hpp  MockConfigurationManager.hpp  MockCryptor.hpp  MockEventBus.hpp  MockInputDevice.hpp  MockInputDeviceEventHandler.hpp  MockLogger.hpp  MockMessenger.hpp  MockPinger.hpp  MockService.hpp  MockServiceFactory.hpp  MockTCPEndpoint.hpp  MockTransport.hpp  MockUSBEndpoint.hpp  MockVideoOutput.hpp
tests/test_data/: test_config.json
tests/unit/: AdvancedIntegrationTests.cpp  AdvancedMockTests.cpp  CMakeLists.txt  ConfigurationTests.cpp  ConnectionTests.cpp  ErrorHandlingTests.cpp  IntegrationTests.cpp  MockBasedTests.cpp  PerformanceTests.cpp  ProjectionLayerTests.cpp  ProjectionTests.cpp  RealWorldScenarioTests.cpp  ServiceFactoryTests.cpp  ServiceTests.cpp  main.cpp  test_android_auto_entity.cpp  test_bluetooth_handler.cpp  test_configuration_manager.cpp  test_event_bus.cpp  test_logger.cpp  test_rest_api_server.cpp  test_service_factory.cpp  test_state_machine.cpp  test_vendor_extension.cpp  test_wifi_projection.cpp
(+139 files in other folders)
